--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
+/*
+colors:
+peach: #FF9E95
+light blue: #ABFFF8
+lavender: #AB92E8
+brown: #5B533B
+green blue light: #BBFFB8
+*/
 body {
     background-color: none;
+    color:#FF9E95;
 }
 
 #header {
