--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,10 @@ body {
     height: auto;
 }
 #nav > ul {
-    
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    transform: translateY(50%);
     
 }
 .menu{
