--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ body {
     padding: 0;
     margin: 0;
     transform: translateY(50%);
-        
 }
 
 #nav > ul > button {
@@ -47,8 +46,12 @@ body {
     border:none;
     padding: 15px 32px;
     transition: background-color .25s;
-
 }
+#nav > ul > button:hover {
+   background-color:palevioletred;
+}
+
+
 .menu{
     display:flex;
     background-color:#AB92E8
