--- a/css/styles.css
+++ b/css/styles.css
@@ -144,16 +144,52 @@ body {
 }
 
 #latest-work > li {
-  
+    padding-top:15px;
+    padding-bottom:15px;
+    width:100%;
+    border-bottom:1px black solid;
+}
+
+#latest-work > li:before {
+    content:'';
+    border-color:transparent black;
+    border-style: solid; 
+    border-width: .35em 0 .35em .45em;
+    display: block;
+    height:0;
+    width:0;
+    left:-1em;
+    top:.9em;
+    position:relative;
+}
+
+#favorite-sites {
+    background-image: url(image/computers.jpeg);
+    border-top:5px lightcyan solid;
+    border-bottom:5px lightcyan solid;
+    
+}
+
+#favorite-sites ul {
+   list-style: none;
+    display: flex;
+    justify-content: space-around;
+    margin:0;
+    padding:40px;
+    
 }
 
 
 footer{
     background-color:lightcyan;
-    margin:0;   
+    text-align:center;
+    font-family: 'lato', sans-serif;
+    min-height: 100px;
 }
 
 footer >h1 {
     margin:0;
+    transform: translateY(50%)
+    
 }
 
